--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "sirmixalot",
+  "name": "two-chainz",
   "version": "0.0.2",
-  "description": "Utilities for making it easier to use some alternatives to inheritance",
+  "description": "Utilities for building Higher-Order Components in React",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf lib; tsc",
     "lint": "tslint 'src/*.ts{,x}'; exit 0",
     "prepublish": "npm run build",
-    "test": "mocha --compilers ts:ts-node/register"
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -21,13 +22,15 @@
     "url": "https://github.com/mjewell/sirmixalot/issues"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
+    "@types/core-js": "0.9.36",
     "@types/lodash": "^4.14.36",
     "@types/mocha": "^2.2.38",
     "@types/node": "^6.0.41",
+    "@types/react": "^15.0.16",
     "awesome-typescript-loader": "^3.0.0-beta.17",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
+    "react": "^15.4.2",
     "ts-node": "^2.0.0",
     "tslint": "^3.15.0-dev.0",
     "tslint-eslint-rules": "^1.5.0",
