--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf lib; tsc",
     "lint": "tslint 'src/*.ts{,x}'; exit 0",
     "prepublish": "npm run build",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register",
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require jsdom-global/register",
     "test:watch": "npm test -- --watch"
   },
   "repository": {
@@ -23,14 +23,20 @@
   },
   "devDependencies": {
     "@types/core-js": "0.9.36",
+    "@types/enzyme": "^2.7.7",
     "@types/lodash": "^4.14.36",
     "@types/mocha": "^2.2.38",
     "@types/node": "^6.0.41",
     "@types/react": "^15.0.16",
     "awesome-typescript-loader": "^3.0.0-beta.17",
+    "enzyme": "^2.8.0",
+    "jsdom": "^9.12.0",
+    "jsdom-global": "^2.1.1",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "react": "^15.4.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.3",
     "ts-node": "^2.0.0",
     "tslint": "^3.15.0-dev.0",
     "tslint-eslint-rules": "^1.5.0",
