--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "^2.2.2"
   },
   "dependencies": {
+    "configurable-function": "^0.0.2",
     "hoist-non-react-statics": "^1.2.0",
     "lodash": "^4.17.4"
   },
